# zulip-refinement-bot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  README.md  deploy_pythonanywhere.md  docker-compose.yml  env.example  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
scripts/: check_migration_test_coverage.py  check_migration_versions.py  setup.sh  validate_schema_consistency.py
src/zulip_refinement_bot/: __init__.py  bot.py  business_hours.py  cli.py  config.py  container.py  database.py  database_pool.py  exceptions.py  fastapi_app.py  flask_app.py  github_api.py  handlers.py  interfaces.py  models.py  parser.py  services.py  webhook_bot.py  zulip_wrapper.py
src/zulip_refinement_bot/migrations/: __init__.py  base.py  cli.py  runner.py
src/zulip_refinement_bot/migrations/versions/: __init__.py  m001_initial_schema.py  m002_add_message_id.py  m003_batch_voters.py  m004_final_estimates.py  m005_remove_title_column.py  m006_add_abstentions.py  m007_add_reminders.py  m008_add_results_message_id.py
tests/: __init__.py  conftest.py  test_batch_voters.py  test_business_hours.py  test_config.py  test_database.py  test_database_migrated.py  test_discussion_complete.py  test_fastapi_webhook.py  test_finish.py  test_flask_webhook.py  test_github_api.py  test_migration_cli.py  test_migration_versions.py  test_migrations.py  test_multi_voter.py  test_parser.py  test_proxy_voting.py  test_reminder_system.py  test_services.py  test_voting_service.py
